--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,16 @@
           <div class="navigation">
             <button id="nav-btn" class="nav-btn"></button>
             <nav class="nav-closed">
-              <a href="#">domů</a>
-              <a href="#">menu</a>
-              <a href="#">galerie</a>
-              <a href="#">kontakt</a>
+              <a href="#home">domů</a>
+              <a href="#menu-intro">menu</a>
+              <a href="#gallery">galerie</a>
+              <a href="#contact">kontakt</a>
             </nav>
           </div>
         </div>
       </header>
       <div class="container">
-        <div class="intro">
+        <div id="home" class="intro">
           <h1>Přijď to ochutnat!</h1>
           <p>Nabízíme kvalitní kávu, útulné prostředí a perfektní servis.</p>
         </div>
@@ -32,7 +32,7 @@
     <section class="menu">
       <div class="container">
         <h2>Naše nabídka</h2>
-        <p class="menu-intro">
+        <p id="menu-intro" class="menu-intro">
           Vyberte si z našeho interaktivního menu a nemusíte čekat na obsluhu
         </p>
 
@@ -76,12 +76,12 @@
       </div>
     </section>
 
-    <section class="gallery"></section>
+    <section id="gallery" class="gallery"></section>
 
     <section>
       <div class="container">
         <h2>Kde nás najdete</h2>
-        <div class="contacts">
+        <div id="contact" class="contacts">
           <div class="contacts__address">
             Na Mýtě 240 <br />
             514 03 Byšky nad Jizerou <br />
