--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,14 @@
       </div>
     </section>
 
-    <section id="gallery" class="gallery"></section>
+    <section id="gallery" class="gallery">
+      <h1 class = 'text__gallery'>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+        dolorem non perspiciatis pariatur consequatur asperiores officiis,
+        doloremque ea ratione. Assumenda, maiores corrupti? Nisi optio sapiente
+        incidunt hic, atque rem consectetur.
+      </h1>
+    </section>
 
     <section>
       <div class="container">
